WIP:fix always visible tooltip

--- a/src/components/navabr/navbar.style.scss
+++ b/src/components/navabr/navbar.style.scss
@@ -13,5 +13,6 @@
 
   h2 {
     font-size: 32px;
+    color: var(--primary);
   }
 }
